# trading-simulator

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
backend/db/: db.db  db.py
backend/models/deposits/: deposit.py  types.py
backend/models/homemodels/: lookup.py  markets.py  sector.py
backend/models/orders/: buy.py  sell.py
backend/models/positions/: positions.py
backend/models/svmodels/: news.py  symbol_component.py
backend/models/users/: user.py
backend/models/withdrawals/: withdraw.py
backend/presenters/: symbol_presenter.py
backend/presenters/deposit/: deposit_presenter.py
backend/presenters/home/: frame1_presenter.py  frame2_1_presenter.py  frame2_2_presenter.py  home_presenter.py
backend/presenters/login/: login_presenter.py
backend/presenters/orders/: buypresenter.py  sellpresenter.py
backend/presenters/positions/: positions_presenter.py
backend/presenters/profile/: profile_presenter.py
backend/presenters/withdraw/: withdraw_presenter.py
backend/states/: pages.py
backend/users/: changepassword.py  create.py  login.py  state.py
frontend/components/: navbar.py
frontend/components/deposit/: layout_frame1.py  layout_frame2.py
frontend/components/login/: layout_frame1.py  layout_frame2.py
frontend/components/orders/: buy_layout.py  sell_layout.py
frontend/components/positions/: layout_frame1.py  layout_frame2.py
frontend/components/profile/: layout_frame1.py  layout_frame2.py
frontend/components/withdraw/: layout_frame1.py  layout_frame2.py
frontend/gui/: frames.py
frontend/gui/orders/: buy.py  sell.py
(+40 files in other folders)
